keycloak: Change collector to toList method.