@@ -20,10 +20,8 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
@@ -34,10 +32,10 @@ import com.ubiqube.etsi.mano.auth.AuthException;
  * @author Olivier Vignaud {@literal <ovi@ubiqube.com>}
  *
  */
-public class KeycloakRealmRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
+public class KeycloakRealmRoleConverter implements Converter<Jwt, Collection<SimpleGrantedAuthority>> {
 
 	@Override
-	public Collection<GrantedAuthority> convert(final Jwt jwt) {
+	public Collection<SimpleGrantedAuthority> convert(final Jwt jwt) {
 		final Map<String, List<String>> realmAccess = (Map<String, List<String>>) jwt.getClaims().get("realm_access");
 		if (null == realmAccess) {
 			throw new AuthException("Unable to find 'realm_access' in token.");
@@ -45,7 +43,7 @@ public class KeycloakRealmRoleConverter implements Converter<Jwt, Collection<Gra
 		return realmAccess.get("roles").stream()
 				.map(roleName -> "ROLE_" + roleName.toUpperCase(Locale.ENGLISH))
 				.map(SimpleGrantedAuthority::new)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 }
